# honeybee

./: .dockerignore  .env.example  .env.placeholder  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cluster.yml  docker-compose.production.yml  docker-compose.yml  hb  jest.config.js  package.json  skaffold.yaml  tsconfig.json  vespa.code-workspace
.github/workflows/: deploy.yml
collector/: .dockerignore  .gitignore  Dockerfile  README.md  package.json
collector/src/: cli.ts  db.ts  queue.ts  scheduler.ts  util.ts  worker.ts
docker/mongodb-kafka-connector/: Dockerfile  entrypoint.sh
docker/quickwit/: honeybee_index_config.yaml
k8s/base/: db.yaml  kustomization.yaml  redis.yaml  scheduler.yaml  worker.yaml
kafka-connect/: Dockerfile  go.mod  go.sum  main.go
notes/: system.md  youtube.md
predictor/: .gitignore  predict.py  pyproject.toml
scripts/: agg.js  changestream-consumer.js  hg  kafka-consumer.js  unique.js
src/: cli.ts  constants.ts  index.ts  interfaces.ts  queue.ts  scheduler.ts  util.ts  worker.ts
src/commands/: cleanup.ts  health.ts  inspect.ts  inspectChat.ts  manager.ts  metrics.ts  migrate.ts  migrateChat.ts  migrateDatetime.ts  migrateJsonl.ts  removeDuplicatedActions.ts  (+4 more)
tf/: .terraform.lock.hcl  README.md  data.tf  droplets.tf  node.tf  node_do.tf  node_vultr.tf  outputs.tf  provider.tf  variables.tf
trainer/: .dockerignore  .gitignore  Dockerfile  README.md  dataset.py  pyproject.toml  train.ipynb  train.py
trainer/notebooks/: analysis.ipynb  data.ipynb  jsoncleaning.ipynb
trainer/transform/: superchat.py
(+43 files in other folders)
