[tool.poetry]
name = "vespa-predictor"
version = "0.1.0"
description = ""
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "^3.8.6"
pandas = "^1.2.0"
torch = "^1.7.1"
lightgbm = "^3.1.1"
transformers = "^4.2.1"
torchtext = "^0.8.1"
pandarallel = "^1.5.1"
tables = "^3.6.1"
pyarrow = "^2.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
nbconvert = "^6.0.7"
yapf = "^0.30.0"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
