[tool.poetry]
name = "vespa-predictor"
version = "0.1.0"
description = ""
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "^3.8.6"
pandas = "^1.2.0"
torch = "^1.7.1"
lightgbm = "^3.1.1"
transformers = "^4.2.1"
tables = "^3.6.1"
pyarrow = "^2.0.0"
sentence-transformers = "^0.4.1"
protobuf = "^3.14.0"
matplotlib = "^3.3.3"
scikit-learn = "^0.24.0"
optuna = "^2.4.0"
pandarallel = "^1.5.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
nbconvert = "^6.0.7"
yapf = "^0.30.0"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
